Horizontal scroll bug fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,12 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
+
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 /*
   6. Improve media defaults
 */
